<resources>
    <string name="app_name">DesignApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_now">Create Now!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="select_city">Select City</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in"> Log In</string>
    <string name="create_now_"><a href="">create now</a></string>
    <string name="chapters">Chapters</string>
    <string name="topics">Topics</string>
    <string name="resend_code"><a href="">Resend Code</a></string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">close Navigation Drawer</string>

</resources>