<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textview_CreateNow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/createnow" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_CreateNow"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:gravity="start|center"
                android:text="@string/create_now"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView"

                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_firstName"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/first_name"
                android:paddingStart="10dp"
                android:textColorHint="#AAB2C1"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_CreateNow" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_lastName"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/last_name"
                android:paddingStart="10dp"
                android:textColorHint="#AAB2C1"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_firstName" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_MobileNumber"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textColorHint="#AAB2C1"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_lastName" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_Email"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/enter_email"
                android:paddingStart="10dp"
                android:textColorHint="#AAB2C1"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_MobileNumber" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/spinner_Select_city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/rectanglebar"
                android:hint="@string/select_city"
                android:paddingStart="10dp"
                android:textColorHint="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_Email" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/button_border"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_Select_city" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="Already have an account?"
                android:textColorLink="@color/yellow"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signup" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="15dp"
                android:text="Log In"
                android:textColor="@color/darkblue"
                android:textColorLink="@color/darkblue"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_account"
                app:layout_constraintTop_toBottomOf="@id/btn_signup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>